tests/ui/diagnostic_namespace/on_type_error/on_type_error_union.stderr
error[E0308]: mismatched types
  --> $DIR/on_type_error_union.rs:11:28
   |
LL |     let u1: MyUnion<i32> = 32;
   |             ------------   ^^ expected `MyUnion<i32>`, found integer
   |             |
   |             expected due to this
   |
   = note: expected union `MyUnion<i32>`, found `{integer}`
   = note: expected union `MyUnion<i32>`
               found type `{integer}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
